@@ -1123,8 +1123,9 @@ const CPTCoordinate dependentCoord   = CPTCoordinateY;
  *
  *
  *	If this plot has a delegate that responds to the
- *	@link CPTTradingRangePlotDelegate::tradingRangePlot:barWasSelectedAtRecordIndex: -tradingRangePlot:barWasSelectedAtRecordIndex: @endlink
- *	method, the <code>interactionPoint</code> is compared with each bar in index order.
+ *	@link CPTTradingRangePlotDelegate::tradingRangePlot:barWasSelectedAtRecordIndex: -tradingRangePlot:barWasSelectedAtRecordIndex: @endlink and/or
+ *	@link CPTTradingRangePlotDelegate::tradingRangePlot:barWasSelectedAtRecordIndex:withEvent: -tradingRangePlot:barWasSelectedAtRecordIndex:withEvent: @endlink
+ *	methods, the <code>interactionPoint</code> is compared with each bar in index order.
  *	The delegate method will be called and this method returns <code>YES</code> for the first
  *	index where the <code>interactionPoint</code> is inside a bar.
  *	This method returns <code>NO</code> if the <code>interactionPoint</code> is outside all of the bars.
@@ -1143,13 +1144,19 @@ const CPTCoordinate dependentCoord   = CPTCoordinateY;
     }
 
     id<CPTTradingRangePlotDelegate> theDelegate = self.delegate;
-    if ( [theDelegate respondsToSelector:@selector(tradingRangePlot:barWasSelectedAtRecordIndex:)] ) {
+    if ( [theDelegate respondsToSelector:@selector(tradingRangePlot:barWasSelectedAtRecordIndex:)] ||
+         [theDelegate respondsToSelector:@selector(tradingRangePlot:barWasSelectedAtRecordIndex:withEvent:)] ) {
         // Inform delegate if a point was hit
         CGPoint plotAreaPoint = [theGraph convertPoint:interactionPoint toLayer:thePlotArea];
         NSUInteger index      = [self dataIndexFromInteractionPoint:plotAreaPoint];
 
         if ( index != NSNotFound ) {
-            [theDelegate tradingRangePlot:self barWasSelectedAtRecordIndex:index];
+            if ( [theDelegate respondsToSelector:@selector(tradingRangePlot:barWasSelectedAtRecordIndex:)] ) {
+                [theDelegate tradingRangePlot:self barWasSelectedAtRecordIndex:index];
+            }
+            if ( [theDelegate respondsToSelector:@selector(tradingRangePlot:barWasSelectedAtRecordIndex:withEvent:)] ) {
+                [theDelegate tradingRangePlot:self barWasSelectedAtRecordIndex:index withEvent:event];
+            }
             return YES;
         }
     }
